Fix spaces between words not showing up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@
     font-family: 'Ubuntu Mono', monospace;
     font-size: 2rem;
     text-align: center;
+    letter-spacing: 1rem;
 
 }
 
